= master

* Drop all 1xx bodies in the drop body plugin (jeremyevans)

* Do not set a Content-Length header for 205 responses on Rack <2.0.2 (jeremyevans)

* Use Rack::Files instead of Rack::File if available, to avoid deprecation warnings (jeremyevans)

* Work with Rack 3 SPEC, using Rack::Headers to handle lowercasing header keys on Rack 3 (jeremyevans)

* Allow overriding script tag type attribute returned by assets method in assets plugin (pusewicz) (#250)

* Make reloading render plugin after additional_view_directories plugin retain :allowed_paths (jeremyevans)

= 3.53.0 (2022-02-14)

* Make indifferent_params plugin support rack main branch (jeremyevans)

* Add additional_view_directories plugin, for checking multiple view directories for templates (jeremyevans) (#229)

= 3.52.0 (2022-01-14)

* Fix return value of Roda.freeze when multi_route plugin is used (jeremyevans) (#240)

* Use faster OpenSSL::Digest instead of Digest for assets plugin SRI support (jeremyevans)

* Drop development dependency on haml (jeremyevans)

* Make the path method in the path plugin handle blocks that accept keyword arguments in Ruby 3+ (adam12) (#227)

* Support typecast_params :date_parse_input_handler plugin option for handling input to date parsing methods (jeremyevans)

= 3.51.0 (2021-12-15)

* Avoid method redefinition warning in error_handler plugin in verbose warning mode (jeremyevans)

* Allow run in multi_run plugin to be called without an app to remove existing handler (jeremyevans)

* Allow route in named_routes plugin to be called without a block to remove existing handler (jeremyevans)

= 3.50.0 (2021-11-12)

* Add capture_erb plugin for capturing ERB template blocks, instead of injecting them into the template output (jeremyevans)

* Add inject_erb plugin for injecting content directly into ERB template output (jeremyevans)

* Allow hash_branch and hash_path in hash_routes plugin to be called without a block to remove existing handler (jeremyevans)
