@@ -14,6 +14,22 @@ describe "run_handler plugin" do
     body('/a').must_equal 'a'
   end
 
+  it "closes body when passing" do
+    o = Object.new
+    closed = false
+    o.define_singleton_method(:close){closed = true}
+    pr = proc{|env| [(env['PATH_INFO'] == '/a' ? 404 : 201), {}, (env['PATH_INFO'] == '/a' ? o : ['b'])]}
+    app(:run_handler) do |r|
+      r.run pr, :not_found=>:pass
+      'a'
+    end
+
+    body.must_equal 'b'
+    closed.must_equal false
+    body('/a').must_equal 'a'
+    closed.must_equal true
+  end
+
   it "makes r.run with a block yield rack app to block, and have it be thrown afterward" do
     pr = proc{|env| [(env['PATH_INFO'] == '/a' ? 404 : 201), {}, ['b']]}
     app(:run_handler) do |r|
